# interview-task

./: README.md  bildungsplan_chat.ipynb  pyproject.toml
data/GS/D/IK/: clusters.json  competences.json  sub_competences.json
data/GS/D/PK/: clusters.json  competences.json  sub_competences.json
data/GYM/BIO/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/BIO/OP/: operators.json
data/GYM/BIO/PK/: clusters.json  competences.json  sub_competences.json
data/GYM/BNT/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/BNT/OP/: operators.json
data/GYM/BNT/PK/: clusters.json  competences.json  sub_competences.json
data/GYM/CH/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/CH/OP/: operators.json
data/GYM/CH/PK/: clusters.json  competences.json  sub_competences.json
data/GYM/D/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/D/PK/: clusters.json  competences.json  sub_competences.json
data/GYM/D/op/: operators.json
data/GYM/E1/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/E1/OP/: operators.json
data/GYM/E1/PK/: clusters.json
data/GYM/ETH/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/ETH/OP/: operators.json
data/GYM/ETH/PK/: clusters.json  competences.json  sub_competences.json
data/GYM/F2/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/F2/OP/: operators.json
data/GYM/F2/PK/: clusters.json
data/GYM/G/IK/: clusters.json  competences.json  sub_competences.json
data/GYM/G/OP/: operators.json
(+64 files in other folders)
